fix(grid-list): stretch list to fill entire width

--- a/src/index.css
+++ b/src/index.css
@@ -222,7 +222,7 @@
 	} 
 	
 	.grid-list {
-		@apply flex flex-col gap-4;
+		@apply flex flex-col gap-4 self-stretch;
 	}
 }
 
